deploy/Deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: java
  namespace: ma-van-bijleveld-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: java
    spec:
      containers:
        - name: container
          image: >-
            image-registry.openshift-image-registry.svc:5000/ma-van-bijleveld-dev/java@sha256:f4963608ca6cde14c9ca84bb88b778cb9a8f56cf369a47ce40d5d1da3034333d
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: Recreate
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
