deploy/Deployment2.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    deployment.kubernetes.io/revision: '1'
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"opdr4_is:latest","namespace":"janjansenn2-dev"},"fieldPath":"spec.template.spec.containers[?(@.name==\"container\")].image","pause":"false"}]
  resourceVersion: '1002511459'
  name: opdr4-deployment1
  uid: 6f09b550-bd3f-45b4-b463-b0e3ba2a43a3
  creationTimestamp: '2023-11-22T12:34:39Z'
  generation: 10
  managedFields:
    - manager: Mozilla
      operation: Update
      apiVersion: apps/v1
      fieldsType: FieldsV1
      fieldsV1:
        'f:spec':
          'f:replicas': {}
      subresource: scale
    - manager: Mozilla
      operation: Update
      apiVersion: apps/v1
      time: '2023-11-23T09:30:13Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            .: {}
            'f:image.openshift.io/triggers': {}
          'f:labels':
            .: {}
            'f:app': {}
        'f:spec':
          'f:progressDeadlineSeconds': {}
          'f:revisionHistoryLimit': {}
          'f:selector': {}
          'f:strategy':
            'f:rollingUpdate':
              .: {}
              'f:maxSurge': {}
              'f:maxUnavailable': {}
            'f:type': {}
          'f:template':
            'f:metadata':
              'f:annotations':
                .: {}
                'f:openshift.openshift.io/restartedAt': {}
              'f:labels':
                .: {}
                'f:app': {}
            'f:spec':
              'f:containers':
                'k:{"name":"container"}':
                  .: {}
                  'f:image': {}
                  'f:imagePullPolicy': {}
                  'f:name': {}
                  'f:ports':
                    .: {}
                    'k:{"containerPort":8080,"protocol":"TCP"}':
                      .: {}
                      'f:containerPort': {}
                      'f:protocol': {}
                  'f:resources': {}
                  'f:terminationMessagePath': {}
                  'f:terminationMessagePolicy': {}
              'f:dnsPolicy': {}
              'f:restartPolicy': {}
              'f:schedulerName': {}
              'f:securityContext': {}
              'f:terminationGracePeriodSeconds': {}
    - manager: kube-controller-manager
      operation: Update
      apiVersion: apps/v1
      time: '2023-11-23T09:57:49Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            'f:deployment.kubernetes.io/revision': {}
        'f:status':
          'f:availableReplicas': {}
          'f:conditions':
            .: {}
            'k:{"type":"Available"}':
              .: {}
              'f:lastTransitionTime': {}
              'f:lastUpdateTime': {}
              'f:message': {}
              'f:reason': {}
              'f:status': {}
              'f:type': {}
            'k:{"type":"Progressing"}':
              .: {}
              'f:lastTransitionTime': {}
              'f:lastUpdateTime': {}
              'f:message': {}
              'f:reason': {}
              'f:status': {}
              'f:type': {}
          'f:observedGeneration': {}
          'f:readyReplicas': {}
          'f:replicas': {}
          'f:updatedReplicas': {}
      subresource: status
  namespace: janjansenn2-dev
  labels:
    app: opdr4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opdr4-deployment1
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: opdr4-deployment1
      annotations:
        openshift.openshift.io/restartedAt: '2023-11-22T12:46:16.043Z'
    spec:
      containers:
        - name: container
          image: >-
            image-registry.openshift-image-registry.svc:5000/janjansenn2-dev/opdr4_is@sha256:033ace7f7ead1dc091fd3b55fabbd1472c918d42c245cf6d8a2eea9f01c66160
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
status:
  observedGeneration: 10
  replicas: 1
  updatedReplicas: 1
  readyReplicas: 1
  availableReplicas: 1
  conditions:
    - type: Available
      status: 'True'
      lastUpdateTime: '2023-11-23T09:57:49Z'
      lastTransitionTime: '2023-11-23T09:57:49Z'
      reason: MinimumReplicasAvailable
      message: Deployment has minimum availability.
    - type: Progressing
      status: 'True'
      lastUpdateTime: '2023-11-23T09:57:49Z'
      lastTransitionTime: '2023-11-23T09:30:42Z'
      reason: NewReplicaSetAvailable
      message: ReplicaSet "opdr4-deployment1-9c75bcc8d" has successfully progressed.
